ADD cname and google

--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="assets/images/profile/favicon.png" sizes="16x16" />
   <meta name="description" content="Web personal de Francisco Javier Gil Bautista, alias avexyk, desarrollador de software." />
+  <meta name="google-site-verification" content="grylc_BZ-T2Hx3CLAJ1jSo9iY0H4QP6skwqO0d7IQcs" />
 </head>
 <body class="bg-white text-black antialiased dark:bg-black dark:text-white">
   <app-root></app-root>
