ADD quotes and styles

--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,11 @@
   <link rel="shortcut icon" type="image/png" href="assets/images/profile/favicon.png" sizes="16x16" />
   <meta name="description" content="Web personal de Francisco Javier Gil Bautista, alias avexyk, desarrollador de software." />
   <meta name="google-site-verification" content="grylc_BZ-T2Hx3CLAJ1jSo9iY0H4QP6skwqO0d7IQcs" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
-<body class="bg-white text-black antialiased dark:bg-black dark:text-white">
+<body class="bg-neutral-50 text-black antialiased dark:bg-neutral-950 dark:text-white">
   <app-root></app-root>
 </body>
 </html>
